# cognition

doc/: README.md  测试用例.odt
src/micros/behavior_management/observe/plugins/detection_cognition_plugin/: CMakeLists.txt  package.xml  plugin_description.xml
src/micros/behavior_management/observe/plugins/detection_cognition_plugin/include/detection_cognition_plugin/: test_plugin.h
src/micros/behavior_management/observe/plugins/detection_cognition_plugin/src/: test_plugin.cpp
src/micros/behavior_management/observe/plugins/tensorrt_cognition_plugin/: CMakeLists.txt  package.xml  plugin_description.xml
src/micros/behavior_management/observe/plugins/tensorrt_cognition_plugin/include/tensorrt_cognition_plugin/: test_plugin.h
src/micros/behavior_management/observe/plugins/tensorrt_cognition_plugin/src/: test_plugin.cpp
src/micros/behavior_management/orient/orient_softbus_msgs/: CMakeLists.txt  package.xml
src/micros/behavior_management/orient/orient_softbus_msgs/msg/: Actor.msg  Broad_State.msg  Domain.msg  Down_Data.msg  Down_Data_Speed_Nav.msg  Evicom.msg  EvidenceConfirm.msg  Formation_Type.msg  GeneralData.msg  GetImages.msg  Leader_Receive.msg  LogInfo.msg  MapData.msg  MegredResult.msg  Mission.msg  MovObject.msg  NavigationPoint.msg  Path.msg  Pre_Waypoint.msg  RecogResult.msg  State.msg  TaskBits.msg  TotalMovObject.msg  TotalUAVRole.msg  Transition.msg  TwistId.msg  TwistIdArray.msg  UAVRole.msg  UTOEvent.msg  UavState.msg  Uav_GCS.msg  Udp_Area_Data.msg  Udp_Model_Data.msg  Up_Data.msg  objectDetectionInfo.msg  singleObjectDetectionInfo.msg  traceToStation.msg  traceVector.msg
src/micros/behavior_management/orient/orient_softbus_msgs/srv/: HistoricalTrace.srv  MapCommands.srv
src/micros/resource_management/cognition/: README.md
src/micros/resource_management/cognition/cognition/cognition_manager/core/resource_collection/: CMakeLists.txt  readme.md
src/micros/resource_management/cognition/cognition/cognition_manager/core/resource_loader/cognition_bus_detection/: CMakeLists.txt  package.xml
src/micros/resource_management/cognition/cognition_manager/core/model_recommend/: CMakeLists.txt  package.xml
src/micros/resource_management/cognition/cognition_manager/core/model_recommend/model_descriptions/: mobilenetssd_002.xml  mobilenetssd_003.xml
src/micros/resource_management/cognition/cognition_manager/core/model_recommend/src/: recommend.cpp
src/micros/resource_management/cognition/cognition_manager/core/model_recommend/test/: task_descriptions.xml
src/micros/resource_management/cognition/cognition_resource/algorithm_lib/faster_rcnn_tf/datasets/: CMakeLists.txt
src/micros/resource_management/cognition/cognition_resource/algorithm_lib/faster_rcnn_tf/faster_rcnn/: CMakeLists.txt  package.xml
src/micros/resource_management/cognition/cognition_resource/algorithm_lib/faster_rcnn_tf/faster_rcnn/src/: faster_rcnn_model.cpp  test.cpp  train.cpp
src/micros/resource_management/cognition/cognition_resource/algorithm_lib/faster_rcnn_tf/faster_rcnn/test/: bbox_transform_test.cpp  config_test.cpp  demo.cpp  muti_thread_test.cpp  restore_ckpt.cpp  save_test.cpp  test_test.cpp  test_train.cpp
src/micros/resource_management/cognition/cognition_resource/algorithm_lib/faster_rcnn_tf/networks/: CMakeLists.txt  package.xml
src/micros/resource_management/cognition/cognition_resource/algorithm_lib/faster_rcnn_tf/networks/include/: network.h  vggnet_test.h  vggnet_train.h
src/micros/resource_management/cognition/cognition_resource/algorithm_lib/faster_rcnn_tf/networks/src/: network.cpp  vggnet_test.cpp  vggnet_train.cpp
src/micros/resource_management/cognition/cognition_resource/algorithm_lib/faster_rcnn_tf/networks/test/: test_vggnet_test.cpp  test_vggnet_train.cpp
src/micros/resource_management/cognition/cognition_resource/algorithm_lib/faster_rcnn_tf/roi_pooling_layer/: CMakeLists.txt  package.xml
src/micros/resource_management/cognition/cognition_resource/algorithm_lib/faster_rcnn_tf/roi_pooling_layer/include/: roi_pool.h
src/micros/resource_management/cognition/cognition_resource/algorithm_lib/faster_rcnn_tf/roi_pooling_layer/src/: roi_pool.cpp  roi_pool_grad.cpp  roi_pool_op.cpp  roi_pool_op_gpu.cu
src/micros/resource_management/cognition/cognition_resource/algorithm_lib/faster_rcnn_tf/roi_pooling_layer/test/: compile-test.sh  roi_pool_test.cpp  roi_pooling_op_grad.py  roi_pooling_op_test.py
src/micros/resource_management/cognition/cognition_resource/algorithm_lib/faster_rcnn_tf/rpn_msr/: CMakeLists.txt  package.xml
src/micros/resource_management/cognition/cognition_resource/algorithm_lib/faster_rcnn_tf/utils/: CMakeLists.txt  package.xml
src/micros/resource_management/cognition/cognition_resource/algorithm_lib/plastic_net/: CMakeLists.txt  package.xml
src/micros/resource_management/cognition/cognition_resource/algorithm_lib/plastic_net/src/: imgdata.cpp  plastic_net_model.cpp  plastic_network.cpp
src/micros/resource_management/cognition/cognition_resource/algorithm_lib/plastic_net/test/: batch_evaluate_test.cpp  imgdata_test.cpp  train.cpp
src/micros/resource_management/cognition/cognition_resource/learning_framework/model_inference/mobilenet_ssd/: CMakeLists.txt  package.xml
src/micros/resource_management/cognition/cognition_resource/learning_framework/model_inference/mobilenet_ssd_tensorrt/: CMakeLists.txt  package.xml
src/micros/resource_management/cognition/cognition_resource/math_model_lib/crowd_compute/crowd_evaluate/: CMakeLists.txt  package.xml
src/micros/resource_management/cognition/cognition_resource/math_model_lib/warning_and_expel/nearby_reconnaissance_model_lib/: CMakeLists.txt  package.xml
src/micros/resource_management/cognition/cognition_resource/math_model_lib/warning_and_expel/warning_and_expel/: CMakeLists.txt  package.xml
src/micros/tools/plugin_test_softbus/: CMakeLists.txt  package.xml
src/micros/tools/plugin_test_softbus/launch/: observe_plugin_test.launch  orient_plugin_test.launch
src/micros/tools/plugin_test_softbus/src/: general_bus_node.cpp  ros_thread.cpp  ros_thread.h
src/third party/: setup
(+245 files in other folders)
