<package>
  <name>orient_softbus_msgs</name>
  <version>0.0.0</version>
  <description>
    orient_softbus_msgs provides messages for common task primitives
    such as xx xx xxx. These primitives are designed
    to provide a common data type and facilitate interoperability
    throughout the system.
  </description>
  <maintainer email="shajiansong@qq.com">JS.Sha</maintainer>
  <author>JS.Sha</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
    <architecture_independent/>
  </export>
</package>
