<?xml version="1.0"?>
<package format="2">
  <name>tensorrt_cognition_plugin</name>
  <version>0.1.0</version>
  <description>The tensorrt package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="shajiansong@todo.todo">shajiansong</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>general_plugin</depend>
  <depend>pluginlib</depend>
  <depend>cognition_dev</depend>
  <depend>cognition_bus</depend>
  <depend>model_recommend</depend>
  <depend>orient_softbus_msgs</depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <general_plugin plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
